# CliPy-Hooks

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.rst  CHANGES.rst  README.md  development_requirements.txt  setup.cfg  setup.py
.github/workflows/: run-pre-commit.yaml  run-tests.yaml
clipy_hooks/: cli.py
pre-commit-pycli/: cli.py
pre_commit_pycli/: cli.py
tests/: __init__.py  conftest.py  test_cli.py
tests/cli/: __init__.py  __main__.py
