[metadata]
name = pre-commit-pycli
version = 0.1.0
description = Convert CLI tools into pre-commit hooks using python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CreatingNull/pre-commit-pycli
author = Steve Richardson
author_email = steve.public@nulltek.xyz
license = Apache2
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
# Follows pre-commit minimums
python_requires = >=3.7

[options.entry_points]
console_scripts =
    clang-format-hook = hooks.clang_format:main
    clang-tidy-hook = hooks.clang_tidy:main
    oclint-hook = hooks.oclint:main
    uncrustify-hook = hooks.uncrustify:main
    cppcheck-hook = hooks.cppcheck:main
    cpplint-hook = hooks.cpplint:main
    include-what-you-use-hook = hooks.include_what_you_use:main

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[coverage:run]

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
